[tool.poetry]
name = "denoc"
version = "0.2.0"
description = "Utilities for compile JavaScript with Deno"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UltiRequiem/denoc"
repository = "https://github.com/UltiRequiem/denoc"
keywords = ["commands", "typescript", "deno","javascript"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
colores = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.10.2"

[tool.poetry.scripts]
denoc = 'denoc:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
